login menu-popup z-index fix

--- a/transtarter-frontend/src/components/shared/header/header-styles.scss
+++ b/transtarter-frontend/src/components/shared/header/header-styles.scss
@@ -135,7 +135,7 @@
 
 .menu-popup {
     position: absolute;
-    z-index: 10;
+    z-index: 777;
     background-color: white;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.30214);
     width: calc(100% - 16px);
